[package]
name = "extract_filetype_from_zip_gui"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Mish <JacobPMish@gmail.com>"]
description = "Simple GUI to extract specific file types out of a zip file"
license = "MIT"

[[bin]]
name = "Zip_File_Extractor"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.17"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
rfd = "0.15.2"
zip = "2.2.2"
image = "0.25.5"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]

[package.metadata.bundle]
name = "Zip File Extractor"
identifier = "io.github.Feromond.extract_filetype_from_zip_gui"
description = "Simple GUI to extract specific file types out of a zip file"
icon = ["./icon.png"]
